--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-select": "^2.1.7",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.4",
+    "@types/react-date-range": "^1.4.10",
     "@types/uuid": "^10.0.0",
     "@vercel/analytics": "^1.5.0",
     "ai": "^4.3.16",
@@ -35,6 +36,7 @@
     "next": "latest",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
+    "react-date-range": "^2.0.1",
     "react-day-picker": "9.8.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.3.1",
